# next-level-ido

./: .gitignore  .prettierignore  Anchor.toml  README.md  package.json
app/: .env  .env.example  LICENSE  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
app/src/common/: constants.ts  tier.ts  token.ts
app/src/components/: Box.tsx  Button.tsx  ComingSoon.tsx  ConnectWalletButton.tsx  Footer.tsx  Header.tsx  Hero.tsx  Logo.tsx  ProjectCard.tsx  ProjectDetail.tsx  SaleInfo.tsx  Statistic.tsx  TierSystem.tsx  TimelineItem.tsx  Toast.tsx  TokenInformation.tsx
app/src/config/: idl.json
app/src/context/: balanceContext.tsx
app/src/hooks/: useAsyncEffect.ts  useCountdown.ts  useFetchWithCache.ts  useGetBalance.ts  useGetIdoPool.ts  useGetProjects.ts  useProvider.ts  useScrollspy.ts  (+2 more)
migrations/: deploy.ts  generate_mint.ts  test.ts  update_ido.ts  utils.ts
migrations/keys/: payer.json
programs/next-level-ido-platform/: Cargo.toml
programs/next-level-ido-platform/src/: access_control.rs  constant.rs  errors.rs  lib.rs  state.rs  utils.rs  version.rs
programs/next-level-ido-platform/src/instructions/: check_allocation.rs  claim_remaining_fund.rs  claim_token.rs  initialize_ido_pool.rs  initialize_pool.rs  initialize_stake_pool.rs  mod.rs  participate_pool.rs  reclaim_mint_authority.rs  refund.rs  simulate_pool_paticipants.rs  stake.rs  unstake.rs  update_ido_pool.rs
scripts/: copy_idl.js  test.js  test.ts
tests/: case1.ts  ido_pool.ts  next-level-ido-platform.ts  seed.ts  utils.ts
tests/keys/: ari-token-mint  x_ari-token-mint
(+55 files in other folders)
